# phd_DCCS

./: README.md  notes.md
coursework/NLP/scripts/: .script_tarea1.py.un~  clase_BERT.ipynb  clase_aplicaciones.ipynb  clase_seq_classification.ipynb  script_tarea1.ipynb  script_tarea1.py  script_tarea1.py~
coursework/NLP/tarea1/: pyvenv.cfg
coursework/NLP/tarea2/: instructions.md
coursework/NLP/tarea2/nlp_project/: README.md  main.py  pyproject.toml
coursework/NLP/tarea2/nlp_project/.ipynb_checkpoints/: main-checkpoint.ipynb
coursework/econometry/data/: behData.RData  behFixData.RData  fixData.RData  modelResults.RData
coursework/econometry/scripts/: .Rhistory  analysis.R  extract_rl_params.R  extract_saccades.R  trabajo_final_LL.docx
coursework/economy_institutions/: syllabus.docx  task1docx
coursework/evolution/data/: inter_rater.csv  responses.csv
coursework/evolution/files/: prueba_evolucion_comportamiento_LL.docx
coursework/evolution/presentations/: presentation_v1.pptx
coursework/evolution/scripts/: .Rhistory  IRR.R  luisluarte_psicometria_final.docx  luisluarte_psicometria_test_v2.docx  preproc.R  task.R  trabajo_ERP_LuisLuarte.docx
coursework/neuro/: .Rhistory  exploratory.R
coursework/topics/: README.txt  logic.js  main.html
experimental_ideas/: .Rhistory  .tap.py.un~  analysis_taps.R  cleaned_data.csv  raw_data.csv  tap-tap.psyexp  tap-tap.py  tap.py~
experimental_ideas/data/: p01_2025_04_21_23_02_35_943999.csv
kaggle/playground-series-s5e8/: .Rhistory  analysis.R
self_study/cable_equation/: problem_statement.odt
(+89 files in other folders)
